<resources>
    <string name="app_name">MyWeather</string>
    <string name="hnt_ex_city">Ex. Cali, CO</string>
    <string name="btn_tittle_search">Search City</string>
    <string name="lbl_current">Current</string>
    <string name="lbl_min">Min</string>
    <string name="lbl_max">Max</string>
    <string name="lbl_weather">Weather</string>

    <string name="hnt_current">Current Weather</string>
    <string name="hnt_min">Min Weather</string>
    <string name="hnt_max">Max Weather</string>
    <string name="hnt_weather">Weather Description</string>

    <string name="btn_map_google">Go to maps</string>

</resources>
